--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -148,6 +148,11 @@
     background-color: var(--primary-color);
     color: var(--light-text);
     align-self: flex-end;
+    text-align: right;
+  }
+
+  .message.received {
+    text-align: left;
   }
   
   @keyframes messageIn {
