--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -13,5 +13,12 @@
     <input type="password" name="password" placeholder="Admin Password" required>
     <button type="submit">Login</button>
   </form>
+  <div class="admin-section">
+    <h3>Update Background Image</h3>
+    <form action="/admin/update-background" method="POST" enctype="multipart/form-data">
+      <input type="file" name="background" accept="image/*">
+      <button type="submit">Update Background</button>
+    </form>
+  </div>
 </body>
 </html>
