add flag location on profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,6 +10,9 @@
 <body class="profile-page">
     <div class="profile-container">
         <h1>Your Profile</h1>
+        <% if (user.isAdmin || user.username === "admin") { %>
+            <div class="alert alert-success">CBJS{FLAG_1}</div>
+        <% } %>
         <div class="avatar-container">
             <img src="/images/<%= user.avatar %>" alt="Avatar" class="avatar">
         </div>
