--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
                 <div class="alert alert-success">CBJS{FLAG_1}</div>
             <% } %>
         <div class="avatar-container">
-            <img src="<%= user.avatar || DEFAULT_AVATAR %>" alt="Avatar" class="avatar">
+            <img src="<%= user.avatar || '/images/default-avatar.png' %>" alt="Avatar" class="avatar">
         </div>
         <form action="/profile/update" method="POST" enctype="multipart/form-data" class="profile-form">
             <label for="avatar">Change Avatar:</label>
