--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -166,6 +166,8 @@
           flex: 1;
           overflow-y: auto;
           padding: 1rem;
+          overflow: scroll;
+          height: 600px;
         }
 
         .chat-form {
