--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -254,6 +254,11 @@
     border-radius: 50%;
     margin-right: 5px;
   }
+
+  .user-status.admin {
+    border: 2px solid gold;
+    box-shadow: 0 0 5px gold;
+  }
   
   .user-status.online {
     background-color: var(--primary-color);
