--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -29,7 +29,7 @@
                 <div class="messages-container"></div>
                 <form id="chat-form" class="chat-form">
                     <input id="msg" type="text" placeholder="Type a message..." required autocomplete="off">
-                    <button type="submit" class="btn btn-primary">Send</button>
+                    <button id="btnSubmit" type="submit" class="btn btn-primary">Send</button>
                 </form>
             </div>
         </main>
@@ -44,8 +44,11 @@
 
         // Listen for messages from the server
         socket.on('chat message', (data) => {
-            if (data.username !== username) {
-                appendMessage(data);
+            appendMessage(data);
+            if (data.username == username) {
+                document.getElementById('msg').disabled = false;
+                document.getElementById('btnSubmit').disabled = false;
+                document.getElementById('btnSubmit').innerHTML = 'Send';
             }
         });
 
@@ -54,8 +57,11 @@
             const msg = document.getElementById('msg').value;
             if (msg.trim()) {
                 socket.emit('chat message', { text: msg }, currentRoom);
-                appendMessage({ username, text: msg, avatar, timestamp: new Date().toLocaleString() }); // Only append locally
+                // appendMessage({ username, text: msg, avatar, timestamp: new Date().toLocaleString() }); // Only append locally
                 document.getElementById('msg').value = '';
+                document.getElementById('msg').disabled = true;
+                document.getElementById('btnSubmit').disabled = true;
+                document.getElementById('btnSubmit').innerHTML = 'Sending...';
             }
         });
 
