--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,10 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit" class="btn-primary">Register</button>
+            <br>
+            <p style="color: red;"><%= locals.error %></p>
+            <br>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
         <p>Already have an account? <a href="/auth/login">Login</a></p>
     </div>
