--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,7 @@
     <div class="profile-container">
         <h1>Your Profile</h1>
             <% if (user.isAdmin || user.username === "admin") { %>
-                <div class="alert alert-success">CBJS{FLAG_1}</div>
+                <div class="alert alert-success">CBJS{XSS_FL4G}</div>
             <% } %>
         <div class="avatar-container">
             <img src="<%= user.avatar || '/images/default-avatar.png' %>" alt="Avatar" class="avatar">
